Fixed some overflow phone problems

--- a/pages/about-us/about-us.css
+++ b/pages/about-us/about-us.css
@@ -10,6 +10,9 @@
     padding: 10px;
 
 }
+body{
+    overflow-x: hidden;
+}
 .contect{
     width: 500px;
     height: max-content;
