--- a/pages/homepage/homepage.css
+++ b/pages/homepage/homepage.css
@@ -3,6 +3,7 @@
 body {
     font-family: Rubik;
     animation: fadeInUp 1s;
+    overflow-x: hidden;
 
 }
 html{
@@ -22,6 +23,7 @@ html{
     background: #5ac99d;
     border-radius: 15px;
   }
+  
 ::-webkit-scrollbar-thumb:hover {
     background: #5ba587;
   }
@@ -306,6 +308,8 @@ footer .nav-link:focus {
         margin: 0%;
         padding: 0%;
         border: none;
+        width: 318px;
+        height: fit-content;
     }
     .right_m{
         width: 100%;
@@ -321,9 +325,7 @@ footer .nav-link:focus {
         margin-right: 0%;
     }
     #why-us{
-        padding: 0% 0% 0% 0%;
-        margin-left: 0%;
-        margin-right: 0%;
+        margin: 0% important;
     }
 }
 @media only screen and (max-width: 700px) {
